--- a/src/ui/Application.css
+++ b/src/ui/Application.css
@@ -1,6 +1,9 @@
 .application {
     position: relative;
 
+    display: flex;
+    flex-direction: column;
+
     width: 100%;
     height: 100%;
 }
@@ -16,5 +19,7 @@
 }
 
 .application > .content {
-
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
