--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto&display=swap);
+
 * {
     margin: 0;
     padding: 0;
@@ -10,4 +12,6 @@
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+
+    font-family: 'Roboto', sans-serif;
 }
