--- a/src/ui/Application.css
+++ b/src/ui/Application.css
@@ -22,4 +22,18 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.application > .content > .sidebar {
+    width: 228px;
+
+    overflow-y: auto;
+    overflow-x: hidden;
+
+    padding: 6px;
+
+    border-right: solid 1px #0002;
 }
